--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -1130,12 +1130,18 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left">
-                            <a href="#">综合排序</a>
-                            <a href="#">销量</a>
-                            <a href="#">价格</a>
-                            <a href="#">评论分</a>
-                            <a href="#">上架时间</a>
+                        <div class="filter_top_left" th:with="p = ${param.sort}">
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(#strings.isEmpty(p) || #strings.startsWith(p,'hotScore'))?'color: #FFF;border-color: #e4393c;background: #e4393c':'color: #333;border-color: #CCC;background: #FFF'}"
+                               sort="hotScore" href="#">综合排序[[${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'↓':'↑'}]]</a>
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount'))?'color: #FFF;border-color: #e4393c;background: #e4393c':'color: #333;border-color: #CCC;background: #FFF'}"
+                               sort="saleCount" href="#">销量[[${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount') && #strings.endsWith(p,'desc'))?'↓':'↑'}]]</a>
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice'))?'color: #FFF;border-color: #e4393c;background: #e4393c':'color: #333;border-color: #CCC;background: #FFF'}"
+                               sort="skuPrice" href="#">价格[[${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice') && #strings.endsWith(p,'desc'))?'↓':'↑'}]]</a>
+                            <a class="sort_a" href="#">评论分</a>
+                            <a class="sort_a" href="#">上架时间</a>
                         </div>
                         <div class="filter_top_right">
                             <span class="fp-text">
@@ -2083,25 +2089,64 @@
         var pn = $(this).attr("pn");
 
         var href = location.href;
-        if(href.indexOf("?") != -1){
-            if(href.indexOf("pageNum") != -1){
-                location.href = replaceParamVal(href, "pageNum", pn);
-            }else {
-                location.href = location.href + "&pageNum=" + pn;
-            }
-        } else {
-            location.href = location.href + "?pageNum=" + pn;
-        }
 
-
+        location.href = replaceAndAddParamVal(href, "pageNum", pn);
         return false;
     })
 
-    function replaceParamVal(url, paramName, replaceVal) {
+    function replaceAndAddParamVal(url, paramName, replaceVal) {
         var oUrl = url.toString();
-        var re = eval('/(' + paramName +'=)([^&]*)/gi');
-        var nUrl = oUrl.replace(re, paramName + '=' + replaceVal);
-        return nUrl;
+        if(oUrl.indexOf(paramName) != -1){
+            var re = eval('/(' + paramName +'=)([^&]*)/gi');
+            var nUrl = oUrl.replace(re, paramName + '=' + replaceVal);
+            return nUrl;
+        }else {
+            var nUrl = "";
+            if(oUrl.indexOf("?") !=  -1){
+                nUrl = oUrl + "&" + paramName + '=' + replaceVal;
+            }else {
+                nUrl = oUrl + "?" + paramName + '=' + replaceVal;
+            }
+
+            return nUrl;
+        }
+
+    }
+
+    $(".sort_a").click(function () {
+        // 1、当前被点击的元素变为选中状态
+        // changeStyle(this);
+        $(this).toggleClass("desc");
+
+        // 2、跳转到指定位置
+        var sort = $(this).attr("sort");
+        sort = $(this).hasClass("desc")?sort+"_desc":sort+"_asc";
+        location.href = replaceAndAddParamVal(location.href,"sort",sort);
+        // 禁用默认行为
+        return false;
+    });
+
+    function changeStyle(ele) {
+        $(".sort_a").css({"color": "#333","border-color": "#CCC","background": "#FFF"});
+        $(".sort_a").each(function(){
+            var text = $(this).text().replace("↓","").replace("↑","");
+            $(this).text(text);
+        });
+        $(ele).css({"color": "#FFF","border-color": "#e4393c","background": "#e4393c"});
+
+        // 改变升降序
+        $(ele).toggleClass("desc");
+        if($(ele).hasClass("desc")){
+            // 降序
+            var text = $(ele).text().replace("↓","").replace("↑","");
+            text = text + "↓";
+            $(ele).text(text);
+        } else {
+            // 升序
+            var text = $(ele).text().replace("↓","").replace("↑","");
+            text = text + "↑";
+            $(ele).text(text);
+        }
     }
 </script>
 </body>
