商城业务-检索服务-页面价格区间搜索

--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -1130,7 +1130,7 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left" th:with="p = ${param.sort}">
+                        <div class="filter_top_left" th:with="p = ${param.sort}, priceRange = ${param.skuPrice}">
                             <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
                                th:attr="style=${(#strings.isEmpty(p) || #strings.startsWith(p,'hotScore'))?'color: #FFF;border-color: #e4393c;background: #e4393c':'color: #333;border-color: #CCC;background: #FFF'}"
                                sort="hotScore" href="#">综合排序[[${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'↓':'↑'}]]</a>
@@ -1141,8 +1141,13 @@
                                th:attr="style=${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice'))?'color: #FFF;border-color: #e4393c;background: #e4393c':'color: #333;border-color: #CCC;background: #FFF'}"
                                sort="skuPrice" href="#">价格[[${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice') && #strings.endsWith(p,'desc'))?'↓':'↑'}]]</a>
                             <a class="sort_a" href="#">评论分</a>
-                            <a class="sort_a" href="#">上架时间</a>
+                            <a href="#">上架时间</a>
+
+                            <input id="skuPriceFrom" type="number" style="width: 100px;margin-left: 30px;" th:value="${#strings.isEmpty(priceRange)?'':#strings.substringBefore(priceRange,'_')}">-
+                            <input id="skuPriceTo" type="number" style="width: 100px;" th:value="${#strings.isEmpty(priceRange)?'':#strings.substringAfter(priceRange,'_')}">
+                            <button id="skuPriceSearchBtn" style="margin-left: 10px">确定</button>
                         </div>
+
                         <div class="filter_top_right">
                             <span class="fp-text">
                                <b>1</b><em>/</em><i>169</i>
@@ -2115,7 +2120,6 @@
 
     $(".sort_a").click(function () {
         // 1、当前被点击的元素变为选中状态
-        // changeStyle(this);
         $(this).toggleClass("desc");
 
         // 2、跳转到指定位置
@@ -2126,28 +2130,14 @@
         return false;
     });
 
-    function changeStyle(ele) {
-        $(".sort_a").css({"color": "#333","border-color": "#CCC","background": "#FFF"});
-        $(".sort_a").each(function(){
-            var text = $(this).text().replace("↓","").replace("↑","");
-            $(this).text(text);
-        });
-        $(ele).css({"color": "#FFF","border-color": "#e4393c","background": "#e4393c"});
+    $("#skuPriceSearchBtn").click(function () {
+        var from = $("#skuPriceFrom").val();
+        var to = $("#skuPriceTo").val();
 
-        // 改变升降序
-        $(ele).toggleClass("desc");
-        if($(ele).hasClass("desc")){
-            // 降序
-            var text = $(ele).text().replace("↓","").replace("↑","");
-            text = text + "↓";
-            $(ele).text(text);
-        } else {
-            // 升序
-            var text = $(ele).text().replace("↓","").replace("↑","");
-            text = text + "↑";
-            $(ele).text(text);
-        }
-    }
+        var query = from + "_" + to;
+
+        location.href = replaceAndAddParamVal(location.href, "skuPrice", query);
+    });
 </script>
 </body>
 </html>
