商城业务-检索服务-条件筛选联动

--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -780,9 +780,9 @@
                 <h3><b>手机</b><em>商品筛选</em></h3>
                 <div class="st-ext">共&nbsp;<span>10135</span>个商品 </div>
             </div>
-            <div class="JD_nav_logo">
+            <div class="JD_nav_logo" th:with="brandid = ${param.brandId}">
                 <!--品牌-->
-                <div class="JD_nav_wrap">
+                <div class="JD_nav_wrap" th:if="${#strings.isEmpty(brandid)}">
                     <div class="sl_key">
                         <span><b>品牌：</b></span>
                     </div>
@@ -824,46 +824,8 @@
                         </ul>
                     </div>
                 </div>
-                <!--价格-->
-                <div class="JD_pre">
-                    <div class="sl_key">
-                        <span>价格：</span>
-                    </div>
-                    <div class="sl_value">
-                        <ul>
-                            <li><a href="#">0-499</a></li>
-                            <li><a href="#">500-999</a></li>
-                            <li><a href="#">1000-1699</a></li>
-                            <li><a href="#">1700-2799</a></li>
-                            <li><a href="#">2800-4499</a></li>
-                            <li><a href="#">4500-11999</a></li>
-                            <li><a href="#">12000以上</a></li>
-                            <li class="sl_value_li">
-                                <input type="text">
-                                <p>-</p>
-                                <input type="text">
-                                <a href="#">确定</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!--系统-->
-                <div class="JD_pre">
-                    <div class="sl_key">
-                        <span>系统：</span>
-                    </div>
-                    <div class="sl_value">
-                        <ul>
-                            <li><a href="#">0-安卓（Android）</a></li>
-                            <li><a href="#">苹果（IOS）</a></li>
-                            <li><a href="#">微软（WindowsPhone）</a></li>
-                            <li><a href="#">基础功能机系统 </a></li>
-                            <li><a href="#">其他</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--屏幕尺寸-->
-                <div class="JD_pre" th:each="attr:${result.attrs}">
+                <!--属性-->
+                <div class="JD_pre" th:each="attr:${result.attrs}" th:if="${!#lists.contains(result.attrIds, attr.attrId)}">
                     <div class="sl_key">
                         <span th:text="${attr.attrName}">屏幕尺寸：</span>
                     </div>
@@ -871,92 +833,6 @@
                         <ul>
                             <li th:each="val:${attr.attrValue}"><a th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+ attr.attrId + '_' + val +'&quot;,true)'}" th:text="${val}">5.56英寸及以上</a></li>
                         </ul>
-                    </div>
-                </div>
-                <!--热点-->
-                <div class="JD_pre">
-                    <div class="sl_key">
-                        <span>热点：</span>
-                    </div>
-                    <div class="sl_value">
-                        <ul>
-                            <li><a href="#">以旧换新</a></li>
-                            <li><a href="#">功能机</a></li>
-                            <li><a href="#">儿童手机</a></li>
-                            <li><a href="#">合约机</a></li>
-                            <li><a href="#">全面屏</a></li>
-                            <li><a href="#">直板键盘</a></li>
-                            <li><a href="#">翻盖</a></li>
-                            <li><a href="#">商务手机</a></li>
-                            <li><a href="#">安全手机</a></li>
-                            <li><a href="#">键盘手机</a></li>
-                        </ul>
-                    </div>
-                    <div class="sl_ext">
-                        <a href="#" class="sl_ext_show">
-                            更多
-                            <i style='background: url("/static/search/image/search.ele.png")no-repeat 3px 7px'></i>
-                            <b style='background: url("/static/search/image/search.ele.png")no-repeat 3px -44px'></b>
-                        </a>
-                        <a href="#">
-                            多选
-                            <i>+</i>
-                            <span>+</span>
-                        </a>
-                    </div>
-                </div>
-                <!--机身颜色-->
-                <div class="JD_pre">
-                    <div class="sl_key">
-                        <span>机身颜色：</span>
-                    </div>
-                    <div class="sl_value">
-                        <ul>
-                            <li><a href="#">白色</a></li>
-                            <li><a href="#">黑色</a></li>
-                            <li><a href="#">灰色</a></li>
-                            <li><a href="#">金色</a></li>
-                            <li><a href="#">银色</a></li>
-                            <li><a href="#">红色</a></li>
-                            <li><a href="#">蓝色</a></li>
-                            <li><a href="#">粉色</a></li>
-                            <li><a href="#">黄的</a></li>
-                            <li><a href="#">蓝色</a></li>
-                        </ul>
-                    </div>
-                    <div class="sl_ext">
-                        <a href="#"></a>
-                        <a href="#">
-                            多选
-                            <i>+</i>
-                            <span>+</span>
-                        </a>
-                    </div>
-                </div>
-                <!--机身内存-->
-                <div class="JD_pre" style="border: 0">
-                    <div class="sl_key">
-                        <span>机身内存：</span>
-                    </div>
-                    <div class="sl_value">
-                        <ul>
-                            <li><a href="#">16G</a></li>
-                            <li><a href="#">8G</a></li>
-                            <li><a href="#">256G</a></li>
-                            <li><a href="#">128G</a></li>
-                            <li><a href="#">64G</a></li>
-                            <li><a href="#">32G</a></li>
-                            <li><a href="#">8G以下</a></li>
-                            <li><a href="#">支持内存卡</a></li>
-                        </ul>
-                    </div>
-                    <div class="sl_ext">
-                        <a href="#"></a>
-                        <a href="#">
-                            多选
-                            <i>+</i>
-                            <span>+</span>
-                        </a>
                     </div>
                 </div>
             </div>
