--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -1158,7 +1158,7 @@
                                 <a href="#">关注</a>
                             </div>
                             <p class="da">
-                                <a href="#" title="购买AppleCare+，获得原厂2年整机保修(含电池)，和多达2次意外损坏的保修服务。购买勾选：保障服务、原厂保2年。">
+                                <a th:href="|http://item.grainmall.com/${product.skuId}.html|" title="购买AppleCare+，获得原厂2年整机保修(含电池)，和多达2次意外损坏的保修服务。购买勾选：保障服务、原厂保2年。">
                                     <img th:src="${product.skuImg}" class="dim">
                                 </a>
                             </p>
