--- a/mall-product/src/main/resources/templates/item.html
+++ b/mall-product/src/main/resources/templates/item.html
@@ -595,9 +595,10 @@
                     <div class="box-attr clear" th:each="attr:${item.saleAttr}">
                         <dl>
                             <dt>选择[[${attr.attrName}]]</dt>
-                            <dd th:each="val:${#strings.listSplit(attr.attrValues ,',')}">
-                                <a href="#">
-                                    [[${val}]]
+                            <dd th:each="vals:${attr.attrValues}">
+                                <a class="sku-attr-value"
+                                   th:attr="skus=${vals.skuIds},class=${#lists.contains(#strings.listSplit(vals.skuIds, ','), item.info.skuId.toString())?'sku-attr-value checked':'sku-attr-value'}">
+                                    [[${vals.attrValue}]]
 <!--                                    <img src="/static/item/img/59ddfcb1Nc3edb8f1.jpg" />-->
                                 </a>
                             </dd>
@@ -1222,6 +1223,33 @@
 <script src="/static/item/js/jquery1.9.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/item/js/js.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
+    $(".sku-attr-value").click(function(){
+        // 1、点击元素先添加上自定义的属性，为了识别我们刚才被点击的
+        var skus = new Array();
+        $(this).addClass("clicked");
+        var curr = $(this).attr("skus").split(",");
+        // 当前被点击的所有sku组合数组放进去
+        skus.push(curr);
+        // 去掉同一行的所有的checked
+        $(this).parent().parent().find(".sku-attr-value").removeClass("checked");
+        $("a[class='sku-attr-value checked']").each(function(){
+            skus.push($(this).attr("skus").split(","));
+        });
+        console.log(skus);
+        // 2、取出他们的交集，得到skuId
+        var filterEle = skus[0];
+        for (var i = 1; i < skus.length; i++) {
+            filterEle = $(filterEle).filter(skus[i]);
+        }
+        console.log(filterEle[0]);
+        location.href = "http://item.grainmall.com/" + filterEle[0] + ".html";
+        // 3、跳转
+    });
+
+    $(function(){
+        $(".sku-attr-value").parent().css({"border":"solid 1px #CCC"})
+        $("a[class='sku-attr-value checked']").parent().css({"border":"solid 1px red"})
+    })
 </script>
 
 </html>
