--- a/mall-auth-server/src/main/resources/templates/login.html
+++ b/mall-auth-server/src/main/resources/templates/login.html
@@ -79,9 +79,9 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="#">
-								<img src="/static/login/JD_img/qq.png" />
-								<span>QQ</span>
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=4168809896&response_type=code&redirect_uri=http://auth.grainmall.com/oauth2.0/weibo/success">
+								<img style="width: 53px;height: 18px" src="/static/login/JD_img/weibo.png" />
+								<span></span>
 							</a>
 						</li>
 						<li class="f4"> | </li>
