--- a/mall-product/src/main/resources/templates/index.html
+++ b/mall-product/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
   					</b>
         <ul>
           <li>
-            <a href="http://auth.grainmall.com/login.html">你好，请登录</a>
+            <a href="http://auth.grainmall.com/login.html">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
           </li>
           <li>
             <a href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a>
