--- a/mall-product/src/main/resources/templates/item.html
+++ b/mall-product/src/main/resources/templates/item.html
@@ -57,10 +57,12 @@
                 </li>
             </ul>
             <ul class="header_ul_right">
-                <li style="border: 0;"><a href="../登录页面\index.html" class="aa">你好，请登录</a></li>
-                <li><a href="../注册页面\index.html" style="color: red;">免费注册</a> |</li>
-                <li><a href="javascript:;" class="aa">我的订单</a> |</li>
-                <li class="jingdong"><a href="javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
+                <li style="border: 0;width: 150px;">
+                    <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                </li>
+                <li th:if="${session.loginUser==null}"><a href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a> |</li>
+                <li th:if="${session.loginUser!=null}"><a href="javascript:;" class="aa">我的订单</a> |</li>
+                <li th:if="${session.loginUser!=null}" class="jingdong"><a href="javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
                     <ol class="jingdong_ol">
                         <li><a href="javascript:;">待处理订单</a></li>
                         <li><a href="javascript:;">消息</a></li>
@@ -251,7 +253,7 @@
     <nav>
         <div class="nav_min">
             <div class="nav_top">
-                <div class="nav_top_one"><a href="#"><img src="/static/item/img/111.png"/></a></div>
+                <div class="nav_top_one"><a href="http://grainmall.com"><img src="/static/item/img/111.png"/></a></div>
                 <div class="nav_top_two"><input type="text"/><button>搜索</button></div>
                 <div class="nav_top_three"><a href="../JD_Shop/One_JDshop.html">我的购物车</a><span class="glyphicon glyphicon-shopping-cart"></span>
                     <div class="nav_top_three_1">
