--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -64,16 +64,16 @@
         </b>
         <ul>
             <li>
-                <a href="#" class="li_2">你好，请登录</a>
+                <a class="li_2" th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
             </li>
-            <li>
-                <a href="#">免费注册</a>
+            <li th:if="${session.loginUser==null}">
+                <a href="http://auth.grainmall.com/register.html">免费注册</a>
             </li>
-            <span>|</span>
-            <li>
+            <span th:if="${session.loginUser==null}">|</span>
+            <li th:if="${session.loginUser!=null}">
                 <a href="#">我的订单</a>
             </li>
-            <span>|</span>
+            <span th:if="${session.loginUser!=null}">|</span>
             <li class="header_wdjd" style="width:80px;">
                 <a href="#">我的谷粒商城</a>
                 <img src="/static/search/image/down-@1x.png" />
