--- a/mall-cart/src/main/resources/templates/cartList.html
+++ b/mall-cart/src/main/resources/templates/cartList.html
@@ -42,7 +42,7 @@
     <div class="one_sousuo">
         <div class="one_search_top">
             <div class="one_top_left">
-                <a href="../" class="one_left_logo"><img src="/static/cart/img/logo1.jpg"></a>
+                <a href="http://grainmall.com/" class="one_left_logo"><img src="/static/cart/img/logo1.jpg"></a>
                 <a href="#" class="one_left_link">购物车</a>
             </div>
             <div class="one_top_right">
@@ -121,7 +121,7 @@
                         <ol>
                             <li><input type="checkbox" class="check"></li>
                             <li>
-                                <dt><img src="img\shop1.jpg" alt=""></dt>
+                                <dt><img src="/static/cart/img/shop1.jpg" alt=""></dt>
                                 <dd>
                                     <p>
 
