--- a/mall-product/src/main/resources/templates/item.html
+++ b/mall-product/src/main/resources/templates/item.html
@@ -627,8 +627,8 @@
                         </div>
                     </div>
                     <div class="box-btns-two">
-                        <a href="../商品分类\index.html">
-                            立即预约
+                        <a href="http://cart.grainmall.com/addToCart">
+                            加入购物车
                         </a>
                     </div>
                     <div class="box-btns-three">
