--- a/mall-cart/src/main/resources/templates/success.html
+++ b/mall-cart/src/main/resources/templates/success.html
@@ -70,14 +70,15 @@
                         <div class="p-item">
                             <div class="p-img">
                                 <a href="/javascript:;" target="_blank"><img style="height: 60px;width:60px;"
+                                                                             th:src="${item.image}"
                                                                              src="/static/cart/img/shop1.jpg"></a>
                             </div>
                             <div class="p-info">
                                 <div class="p-name">
-                                    <a href="http://item.grainmall.com/1.html"
-                                       text="${skuInfo?.skuName}">TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
+                                    <a th:href="'http://item.grainmall.com/' + ${item.skuId} + '.html'"
+                                       th:text="${item.title}">TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
                                 </div>
-                                <div class="p-extra"><span class="txt" text="'数量：'+${skuNum}">  数量：1</span></div>
+                                <div class="p-extra"><span class="txt" th:text="'数量：'+${item.count}">  数量：1</span></div>
                             </div>
                             <div class="clr"></div>
                         </div>
@@ -89,7 +90,7 @@
                         <div class="clr"></div>
                         <div class="bg_shop">
                             <a class="btn-tobback"
-                               href="http://item.grainmall.com/1.html">查看商品详情</a>
+                               href="'http://item.grainmall.com/' + ${item.skuId} + '.html'">查看商品详情</a>
                             <a class="btn-addtocart" href="http://cart.grainmall.com/cart.html"
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
