--- a/mall-product/src/main/resources/templates/item.html
+++ b/mall-product/src/main/resources/templates/item.html
@@ -610,7 +610,7 @@
 
                 <div class="box-btns clear">
                     <div class="box-btns-one">
-                        <input type="text" name="" id="" value="1" />
+                        <input type="text" name="" id="numInput" value="1" />
                         <div class="box-btns-one1">
 
                             <div>
@@ -627,7 +627,7 @@
                         </div>
                     </div>
                     <div class="box-btns-two">
-                        <a href="http://cart.grainmall.com/addToCart">
+                        <a href="#" id="addToCart" th:attr="skuId=${item.info.skuId}">
                             加入购物车
                         </a>
                     </div>
@@ -1252,6 +1252,13 @@
         $(".sku-attr-value").parent().css({"border":"solid 1px #CCC"})
         $("a[class='sku-attr-value checked']").parent().css({"border":"solid 1px red"})
     })
+
+    $("#addToCart").click(function () {
+        var num = $("#numInput").val();
+        var skuId = $(this).attr("skuId");
+        location.href = "http://cart.grainmall.com/addToCart?skuId=" + skuId + "&num=" + num;
+        return false;
+    });
 </script>
 
 </html>
