--- a/mall-cart/src/main/resources/templates/cartList.html
+++ b/mall-cart/src/main/resources/templates/cartList.html
@@ -23,8 +23,10 @@
 
             </ul>
             <ul class="header-right">
-                <li><a href="../登录页面\index.html" style="color: red;">你好，请登录</a></li>
-                <li><a href="../注册页面\index.html">免费注册</a></li>
+                <li>
+                    <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                </li>
+                <li><a th:if="${session.loginUser==null}" href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a></li>
                 <li class="spacer"></li>
                 <li><a href="">我的订单</a></li>
                 <li class="spacer"></li>
@@ -51,7 +53,7 @@
                 <input type="button" value="搜索" class="one_right_btn">
             </div>
         </div>
-        <!--<div class="one_search_load" th:if="${userId}==null">-->
+        <div class="one_search_load" th:if="${session.loginUser==null}">
         <div class="one_search_load">
             <img src="/static/cart/img/shop_07.jpg" class="one_load_wraing">
             <span>您还没有登录！登录后购物车的商品将保存到您账号中</span>
@@ -80,71 +82,38 @@
         </div>
 
         <div class="One_ShopCon">
-            <ul>
-                <!--<li th:each="cartInfo:${cartList}">
-                    <div> </div>
-
-                    <div>
-                        <ol>
-                            <li><input type="checkbox" class="check" th:value="${cartInfo.skuId}" onchange="checkSku(this)" th:checked="(${cartInfo.isChecked}==1)?'true':'false'" /></li>
-                            <li>
-                                <dt><img th:src="${cartInfo.imgUrl}" src="/static/cart/img/shop1.jpg" alt=""></dt>
-                                <dd th:onclick="'toItem('+${cartInfo.skuId}+')'">
-                                    <p>
-                                        <span th:text="${cartInfo.skuName}">TCL 55A950C 55英寸32核</span>
-                                    </p>
-                                </dd>
-                            </li>
-                            <li>
-                                <p class="dj" th:text="'￥'+${cartInfo.skuPrice}">4599.00</p>
-                            </li>
-                            <li>
-                                <p>
-                                    <span>-</span>
-                                    <span th:text="${cartInfo.skuNum}">5</span>
-                                    <span>+</span>
-                                </p>
-                            </li>
-                            <li style="font-weight:bold">
-                                <p class="zj" th:text="'￥'+${cartInfo.totalPrice}">￥22995.00</p>
-                            </li>
-                            <li>
-                                <p>删除</p>
-                            </li>
-                        </ol>
-                    </div>
-                </li>-->
-                <li>
+            <h1 th:if="${cartInfo.items == null}">购物车还没有商品，<a href="http://grainmall.com">去购物</a></h1>
+            <ul th:if="${cartInfo.items != null}">
+                <li th:each="item:${cartInfo.items}">
                     <div>
                     </div>
                     <div>
                         <ol>
-                            <li><input type="checkbox" class="check"></li>
+                            <li><input type="checkbox" class="check" th:checked="${item.check}"></li>
                             <li>
-                                <dt><img src="/static/cart/img/shop1.jpg" alt=""></dt>
-                                <dd>
+                                <dt><img th:src="${item.image}" alt=""></dt>
+                                <dd style="width: 300px;">
                                     <p>
-
-                                        <span>TCL 55A950C 55英寸32核</span>
-                                        <span>尺码: 55时 超薄曲面 人工智能</span>
+                                        <span th:text="${item.title}">TCL 55A950C 55英寸32核</span>
+                                        <br/>
+                                        <span th:each="attr:${item.skuAttr}">[[${attr}]]</span>
                                     </p>
-                                    <p>人工智能 HDR曲面超薄4K电视金属机</p>
 
                                 </dd>
                             </li>
                             <li>
-                                <p class="dj">￥4599.00</p>
+                                <p class="dj" th:text="'￥' + ${#numbers.formatDecimal(item.price, 3,2)}">￥4599.00</p>
 
                             </li>
                             <li>
                                 <p>
                                     <span>-</span>
-                                    <span>5</span>
+                                    <span th:text="${item.count}">5</span>
                                     <span>+</span>
                                 </p>
 
                             </li>
-                            <li style="font-weight:bold"><p class="zj">￥22995.00</p></li>
+                            <li style="font-weight:bold"><p class="zj">￥[[${#numbers.formatDecimal(item.totalPrice, 1, 2)}]]</p></li>
                             <li>
                                 <p>删除</p>
 
@@ -155,7 +124,7 @@
 
             </ul>
         </div>
-        <div class="One_ShopFootBuy fix1">
+        <div class="One_ShopFootBuy fix1" th:if="${cartInfo != null}">
             <div>
                 <ul>
                     <li><input type="checkbox" class="allCheck"><span>全选</span></li>
@@ -174,8 +143,8 @@
             </div>
             <div>
                 <ol>
-                    <li>总价:<span style="color:#e64346;font-weight:bold;font-size:16px;" class="fnt">￥0.00</span></li>
-
+                    <li>总价:<span style="color:#e64346;font-weight:bold;font-size:16px;" class="fnt">￥[[${#numbers.formatDecimal(cartInfo.totalAmount, 1, 2)}]]</span></li>
+                    <li>优惠：<span>￥[[${#numbers.formatDecimal(cartInfo.reduce, 1, 2)}]]</span></li>
                 </ol>
             </div>
             <div>
@@ -256,8 +225,8 @@
     }
 
     function login() {
-        var s = encodeURIComponent("http://cart.gmall.com:8087/cartList");
-        window.location.href = "http://passport.atguigu.com/index?originUrl=" + s;
+        var s = encodeURIComponent("http://cart.grainmall.com/cartList");
+        window.location.href = "http://auth.grainmall.com/login.html";
     }
 
     function checkSku(chkbox) {
