--- a/mall-cart/src/main/resources/templates/success.html
+++ b/mall-cart/src/main/resources/templates/success.html
@@ -26,8 +26,8 @@
 
         <ul class="hd_wrap_right">
             <li class="forel">
-                <a href="/javascript:;" class="link_login">你好,请登录</a>&nbsp;
-                <a href="/javascript:;" class="link_regist">免费注册</a>
+                <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                <a th:if="${session.loginUser==null}" href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a>
             </li>
             <li class="spacer"></li>
 
@@ -75,7 +75,7 @@
                             </div>
                             <div class="p-info">
                                 <div class="p-name">
-                                    <a th:href="'http://item.grainmall.com/' + ${item.skuId} + '.html'"
+                                    <a th:href="'http://item.grainmall.com/'+${item.skuId}+'.html'"
                                        th:text="${item.title}">TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
                                 </div>
                                 <div class="p-extra"><span class="txt" th:text="'数量：'+${item.count}">  数量：1</span></div>
