--- a/mall-cart/src/main/resources/templates/cartList.html
+++ b/mall-cart/src/main/resources/templates/cartList.html
@@ -106,10 +106,10 @@
 
                             </li>
                             <li>
-                                <p>
-                                    <span>-</span>
-                                    <span th:text="${item.count}">5</span>
-                                    <span>+</span>
+                                <p th:attr="skuId=${item.skuId}">
+                                    <span class="countOpsBtn">-</span>
+                                    <span class="countOpsNum" th:text="${item.count}">5</span>
+                                    <span class="countOpsBtn">+</span>
                                 </p>
 
                             </li>
@@ -767,6 +767,12 @@
         var skuId = $(this).attr("skuId");
         var check = $(this).prop("checked");
         location.href = "http://cart.grainmall.com/checkItem?skuId="+skuId+"&check="+(check?1:0);
+    });
+
+    $(".countOpsBtn").click(function () {
+        var skuId = $(this).parent().attr("skuId");
+        var num = $(this).parent().find(".countOpsNum").text();
+        location.href = "http://cart.grainmall.com/countItem?skuId="+skuId+"&num="+num;
     });
 </script>
 </html>
