--- a/mall-cart/src/main/resources/templates/success.html
+++ b/mall-cart/src/main/resources/templates/success.html
@@ -90,7 +90,7 @@
                         <div class="clr"></div>
                         <div class="bg_shop">
                             <a class="btn-tobback"
-                               href="'http://item.grainmall.com/' + ${item.skuId} + '.html'">查看商品详情</a>
+                               th:href="'http://item.grainmall.com/'+${item.skuId}+'.html'">查看商品详情</a>
                             <a class="btn-addtocart" href="http://cart.grainmall.com/cart.html"
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
