--- a/mall-order/src/main/resources/templates/confirm.html
+++ b/mall-order/src/main/resources/templates/confirm.html
@@ -75,10 +75,11 @@
 
 				</ul>
 				<ul class="header-right">
-					<li>尚硅谷<img src="/static/order/confirm/img/03.png" style="margin-bottom: 0px;margin-left3: 3px;" /><img src="/static/order/confirm/img/06.png" /></li>
-					<li>|</li>
+					<li>[[${session.loginUser==null?'':session.loginUser.nickname}]]<img src="/static/order/confirm/img/03.png" style="margin-bottom: 0px;margin-left3: 3px;" /><img src="/static/order/confirm/img/06.png" /></li>
 					<li class="spacer"></li>
-					<li><a href="">我的订单</a></li>
+					<li>
+						<a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单</a>
+					</li>
 					<li class="spacer"></li>
 					<li>
 						<a href="">我的谷粒学院</a>
