--- a/mall-product/src/main/resources/templates/index.html
+++ b/mall-product/src/main/resources/templates/index.html
@@ -97,15 +97,15 @@
           <li>
             <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
           </li>
+          <span th:if="${session.loginUser!=null}">|</span>
           <li>
             <a th:if="${session.loginUser==null}" href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a>
           </li>
-          <span>|</span>
+          <span th:if="${session.loginUser==null}">|</span>
           <li>
-            <a href="#">我的订单</a>
+            <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单</a>
           </li>
-
-
+          <span th:if="${session.loginUser!=null}">|</span>
         </ul>
       </div>
     </div>
