--- a/mall-product/src/main/resources/templates/item.html
+++ b/mall-product/src/main/resources/templates/item.html
@@ -57,11 +57,15 @@
                 </li>
             </ul>
             <ul class="header_ul_right">
-                <li style="border: 0;width: 150px;">
-                    <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                <li style="width: 130px;">
+                    <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]&nbsp;&nbsp;|</a>
                 </li>
-                <li th:if="${session.loginUser==null}"><a href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a> |</li>
-                <li th:if="${session.loginUser!=null}"><a href="javascript:;" class="aa">我的订单</a> |</li>
+                <li th:if="${session.loginUser==null}">
+                    <a  href="http://auth.grainmall.com/register.html" class="li_2">免费注册&nbsp;&nbsp;|</a>
+                </li>
+                <li>
+                    <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单&nbsp;&nbsp;|</a>
+                </li>
                 <li th:if="${session.loginUser!=null}" class="jingdong"><a href="javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
                     <ol class="jingdong_ol">
                         <li><a href="javascript:;">待处理订单</a></li>
