--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -64,14 +64,15 @@
         </b>
         <ul>
             <li>
-                <a class="li_2" th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
             </li>
-            <li th:if="${session.loginUser==null}">
-                <a href="http://auth.grainmall.com/register.html">免费注册</a>
+            <span th:if="${session.loginUser!=null}">|</span>
+            <li>
+                <a th:if="${session.loginUser==null}" href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a>
             </li>
             <span th:if="${session.loginUser==null}">|</span>
-            <li th:if="${session.loginUser!=null}">
-                <a href="#">我的订单</a>
+            <li>
+                <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单</a>
             </li>
             <span th:if="${session.loginUser!=null}">|</span>
             <li class="header_wdjd" style="width:80px;">
