--- a/mall-cart/src/main/resources/templates/success.html
+++ b/mall-cart/src/main/resources/templates/success.html
@@ -26,13 +26,12 @@
 
         <ul class="hd_wrap_right">
             <li class="forel">
-                <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
+                <a style="width: 130px;" th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'javascript:void(0);'}">你好，[[${session.loginUser==null?'请登录':session.loginUser.nickname}]]</a>
                 <a th:if="${session.loginUser==null}" href="http://auth.grainmall.com/register.html" class="li_2">免费注册</a>
             </li>
             <li class="spacer"></li>
-
             <li>
-                <a href="/javascript:;">我的订单</a>
+                <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单</a>
             </li>
 
 
