--- a/mall-order/src/main/resources/templates/pay.html
+++ b/mall-order/src/main/resources/templates/pay.html
@@ -11,8 +11,10 @@
       <div class="Jdbox_head">
         <img src="/static/order/pay/img/logo1.jpg" alt=""><span class="bank">收银台</span>
         <ul>
-          <li><span>尚硅谷</span><span>退出</span></li>
-          <li>我的订单</li>
+          <li><span>[[${session.loginUser==null?'':session.loginUser.nickname}]]&nbsp;</span><span>[[${session.loginUser==null?'':'退出'}]]</span></li>
+          <li>
+            <a th:href="${session.loginUser==null?'http://auth.grainmall.com/login.html':'http://order.grainmall.com/list.html'}">我的订单</a>
+          </li>
           <li>支付帮助</li>
         </ul>
       </div>
